# engram

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: BENCHMARKS.md  locomo_bench.py  longmemeval_bench.py
engram/: __init__.py  agents.py  audit.py  chateau.py  chateau_graph.py  cli.py  config.py  conflict.py  convo_miner.py  knowledge_graph.py  layers.py  mcp_server.py  miner.py  onboarding.py  palace.py  palace_graph.py  replay.py  searcher.py  shorthand.py  watcher.py
engram/backends/: __init__.py  base.py  chromadb_backend.py  faiss_backend.py  sqlitevec_backend.py
engram/hooks/: engram_precompact_hook.sh  engram_save_hook.sh
engram/plugins/: __init__.py  base.py  linear.py  notion.py  obsidian.py
examples/: basic_mining.py  convo_import.py  mcp_setup.md
tests/: test_chateau.py  test_conflict.py  test_knowledge_graph.py  test_palace.py  test_searcher.py  test_shorthand.py  test_watcher.py
